<resources>
    <string name="app_name">SecureSMS</string>

    //Main Activity
    <string name="main_text">Press Send or Receive button to start the secure SMS communication</string>
    <string name="main_send_button">Send SMS</string>
    <string name="main_receive_button">Receive SMS</string>

    //Pin Activity
    <string name="title_activity_pin">Insert pin</string>
    <string name="activity_pin_textview_text">Insert a 4 digit pin</string>
    <string name="key_board_1">1</string>
    <string name="key_board_2">2</string>
    <string name="key_board_3">3</string>
    <string name="key_board_4">4</string>
    <string name="key_board_5">5</string>
    <string name="key_board_6">6</string>
    <string name="key_board_7">7</string>
    <string name="key_board_8">8</string>
    <string name="key_board_9">9</string>
    <string name="key_board_0">0</string>
    <string name="key_board_cancel">C</string>
    <string name="ok">OK</string>
    <string name="action_settings">Settings</string>

    //Telephone Number Activity
    <string name="title_activity_telephone_number">Insert Telephone Number</string>
    <string name="textViewTelActivity">Insert Phone Number</string>

    //Send Text Activity
    <string name="title_activity_send_text">Send Text</string>
    <string name="send_wait_message">Wait for the SMS and then click on GOT IT! to continue</string>
    <string name="write_msg">Insert text message</string>
    <string name="msg_received">Got it!</string>
    <string name="send_sms">Send</string>

    //Receive Text Activity
    <string name="title_activity_receive_text">Receive Text</string>
    <string name="receive_wait_message">Wait for the SMS and then click on GOT IT! to complete the handshake phase</string>
    <string name="back">Back</string>

</resources>
