<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ssms.securesms.PinActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/activity_pin_textview_text" />

    <TextView
        android:id="@+id/textViewPinActivity"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:gravity="center_horizontal"
        android:textSize="35sp" />

    <Button android:id="@+id/ButtonKeypad1PinActivity"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/textViewPinActivity"
        android:layout_below="@+id/textViewPinActivity"
        android:layout_marginTop="16dp"
        android:text="@string/key_board_1"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button	android:id="@+id/ButtonKeypad2PinActivity"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignBaseline="@+id/ButtonKeypad1PinActivity"
        android:layout_alignBottom="@+id/ButtonKeypad1PinActivity"
        android:layout_centerHorizontal="true"
        android:text="@string/key_board_2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button	android:id="@+id/ButtonKeypad3PinActivity"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignBaseline="@+id/ButtonKeypad2PinActivity"
        android:layout_alignBottom="@+id/ButtonKeypad2PinActivity"
        android:layout_alignRight="@+id/textViewPinActivity"
        android:text="@string/key_board_3"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ButtonKeypad4PinActivity"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/ButtonKeypad1PinActivity"
        android:layout_centerVertical="true"
        android:text="@string/key_board_4"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ButtonKeypad5PinActivity"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignBaseline="@+id/ButtonKeypad4PinActivity"
        android:layout_alignBottom="@+id/ButtonKeypad4PinActivity"
        android:layout_alignLeft="@+id/ButtonKeypad2PinActivity"
        android:text="@string/key_board_5"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ButtonKeypad6PinActivity"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignBaseline="@+id/ButtonKeypad5PinActivity"
        android:layout_alignBottom="@+id/ButtonKeypad5PinActivity"
        android:layout_alignLeft="@+id/ButtonKeypad3PinActivity"
        android:text="@string/key_board_6"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ButtonKeypad7PinActivity"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/ButtonKeypad4PinActivity"
        android:layout_below="@+id/ButtonKeypad4PinActivity"
        android:layout_marginTop="21dp"
        android:text="@string/key_board_7"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ButtonKeypad8PinActivity"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignBaseline="@+id/ButtonKeypad7PinActivity"
        android:layout_alignBottom="@+id/ButtonKeypad7PinActivity"
        android:layout_alignLeft="@+id/ButtonKeypad5PinActivity"
        android:text="@string/key_board_8"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ButtonKeypad9PinActivity"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignBaseline="@+id/ButtonKeypad8PinActivity"
        android:layout_alignBottom="@+id/ButtonKeypad8PinActivity"
        android:layout_alignLeft="@+id/ButtonKeypad6PinActivity"
        android:text="@string/key_board_9"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ButtonKeypadBackPinActivity"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/ButtonKeypad7PinActivity"
        android:layout_below="@+id/ButtonKeypad7PinActivity"
        android:layout_marginTop="16dp"
        android:text="@string/key_board_cancel"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ButtonKeypad0PinActivity"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignBaseline="@+id/ButtonKeypadBackPinActivity"
        android:layout_alignBottom="@+id/ButtonKeypadBackPinActivity"
        android:layout_alignLeft="@+id/ButtonKeypad8PinActivity"
        android:text="@string/key_board_0"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ButtonKeypadOkPinActivity"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignBaseline="@+id/ButtonKeypad0PinActivity"
        android:layout_alignBottom="@+id/ButtonKeypad0PinActivity"
        android:layout_alignLeft="@+id/ButtonKeypad9PinActivity"
        android:text="@string/ok"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>