<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:padding="@dimen/activity_horizontal_margin" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/main_send_button"
        android:backgroundTint="@color/colorButton"
        android:layout_above="@+id/receiveButton"
        android:layout_alignLeft="@+id/receiveButton"
        android:layout_alignStart="@+id/receiveButton"
        android:onClick="buttonAction" />

    <Button
        android:id="@+id/receiveButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/main_receive_button"
        android:backgroundTint="@color/colorButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="140dp"
        android:onClick="buttonAction" />

</RelativeLayout>