<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:duplicateParentState="false"
    android:gravity="top|center"
    android:longClickable="false"
    android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textViewSendTextActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="14dp"
        android:gravity="center_horizontal"
        android:text="@string/send_wait_message"
        android:textSize="18sp"
        android:padding="@dimen/activity_horizontal_margin" />

    <EditText
        android:id="@+id/editTextSendTextActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textViewSendTextActivity"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/activity_horizontal_margin"
        android:ems="10"
        android:hint="@string/write_msg"
        android:visibility="invisible" >
    </EditText>

    <Button
        android:id="@+id/okButtonSendTextActivity"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="160dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/msg_received"
        android:onClick="buttonAction" />

    <Button
        android:id="@+id/inviaButtonSendTextActivity"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignBaseline="@+id/okButtonSendTextActivity"
        android:layout_alignBottom="@+id/okButtonSendTextActivity"
        android:layout_alignLeft="@+id/okButtonSendTextActivity"
        android:text="@string/send_sms"
        android:backgroundTint="@color/colorButton"
        android:visibility="invisible"
        android:onClick="buttonAction" />

</RelativeLayout>